# le-coffre

./: .dockerignore  .env.example  .gitignore  .grype.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  CRYPTOGRAPHIC_ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  LICENSE.md  Makefile  README.md  SECURITY.md  app.config.ts  app.vue  docker-compose.dev.yml  docker-compose.yml  drizzle.config.ts  eslint.config.js  nginx-compose.conf  nuxt.config.ts  package-lock.json  package.json  release-please-config.json  tsconfig.json  vitest.config.ts
server/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  alembic.ini  local_db.sqlite  main.py  migrate.py  pyproject.toml
server/alembic/: README.md  env.py
server/alembic/versions/: 3c25bb38e953_add_password_events_table.py  3f8a91b2c5de_add_password_events_table.py  443d92366c2b_add_login_and_url_to_passwordtable.py  67daeaee83eb_add_domain_event_table.py  6a0a9a567a6d_remove_audit_context_table.py  728072a081f9_initial_schema_with_all_tables.py  91d77868648a_add_one_time_link_table.py  aa385458b504_add_password_events_table.py  c3f8a912b047_add_iam_and_vault_events_tables.py  d28b244c29a1_rename_tables_to_coherent_singular_names.py  d7941142c289_merge_one_time_link_and_auth_migration_.py  ec39be4dc940_add_filtering_columns_to_domain_events.py  f1a2b3c4d5e6_add_revoked_tokens_and_user_session_state.py  fdda4ddd2859_add_one_time_link_table.py
server/api/: [...auth].ts
server/api/folders/: index.post.ts  list.get.ts
server/api/passwords/: create-entry.post.ts  create.post.ts  generate.get.ts
server/api/setup/: generate-master-key.post.ts
server/config/: auth.ts
server/database/: configuration.ts  database.ts  init.ts  schema.ts
server/database/migrations/: 0000_aromatic_riptide.sql  0000_cool_betty_brant.sql  0000_mean_venom.sql  0000_robust_marvel_boy.sql  0000_youthful_leader.sql  0001_complex_marrow.sql  0001_short_ultragirl.sql
server/plugins/: init.ts  logger.ts
server/src/: config.py  logging_config.py  main.py  monitoring.py
server/src/application/: setup.py
server/src/domain/: vault_setup.py
server/src/infra/: container.py
server/src/security/: __init__.py  client_ip.py  csrf_middleware.py  csrf_routes.py  csrf_tokens.py  login_lockout.py  rate_limit_middleware.py  rate_limiter.py  security_headers_middleware.py
server/tests/: conftest.py  test_health_check_filter.py  test_health_endpoints.py  test_logging_config.py  test_monitoring.py  test_run_migrations_retry.py
server/tests/alembic/: test_migrations.py
server/tests/application/: test_password.py  test_setup.py
server/tests/audit_logging_context/: conftest.py
server/tests/domain/: test_shamir_secret_sharing.py
server/tests/e2e/: conftest.py  pytest.ini  test_complete_authentication_workflow.py  test_complete_groups_workflow.py  test_complete_user_workflow.py  test_health_check_filter.py  test_monitoring.py  test_one_time_link_workflow.py  test_password_login_lockout.py  test_password_management_workflow.py  test_rate_limiting_workflow.py  test_refresh_token_replay_containment.py  test_request_id_middleware.py  test_run_migrations_retry.py  test_sso_security.py  test_startup_readiness_gate.py  test_vault_workflow.py
server/tests/fakes/: __init__.py  fake_access_controller.py  fake_domain_event_publisher.py  fake_time_gateway.py
server/tests/mocks/: __init__.py  fake_access_controller.py
server/tests/security/: test_client_ip.py  test_login_lockout.py  test_rate_limit_middleware.py  test_rate_limiter.py
server/tests/shared_kernel/: test_csrf_token_gateway.py  (+5 more)
server/utils/: auth-client.ts  migration.ts  requireAuth.ts  useDatabase.ts
(+1341 files in other folders)
