[project]
name = "Le-Coffre"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.1",
  "authlib==1.6.6",
  "bcrypt==5.0.0",
  "cryptography>=46.0.5",
  "fastapi[standard]>=0.128.0",
  "httpx==0.28.1",
  "passlib[bcrypt]==1.7.4",
  "PyCryptodome==3.23.0",
  "python-multipart>=0.0.22",
  "pyjwt==2.10.1",
  "sqlmodel==0.0.31",
]

[dependency-groups]
dev = [
  "oidc-provider-mock==0.3.3",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-watcher==0.6.3",
  "pytest-xdist==3.8.0",
]
monitoring = [
    "opentelemetry-instrumentation-fastapi>=0.52b0",
    "opentelemetry-exporter-prometheus>=0.52b0",
]
sqlite = ["sqlite-utils==3.39"]
postgres = ["psycopg2==2.9.11", "psycopg[binary]==3.3.2"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
