[project]
name = "Le-Coffre"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18",
  "authlib>=1.6",
  "bcrypt>=5.0",
  "cryptography>=46.0",
  "fastapi[standard]>=0.133",
  "httpx>=0.28",
  "passlib[bcrypt]>=1.7",
  "PyCryptodome>=3.23",
  "python-multipart>=0.0",
  "pyjwt>=2.12",
  "sqlmodel>=0.0",
  "tenacity>=9.0",
]

[dependency-groups]
dev = [
  "oidc-provider-mock>=0.3",
  "pytest>=9.0",
  "pytest-asyncio>=1.3",
  "pytest-watcher>=0.6",
  "pytest-xdist>=3.8",
  "ruff>=0.15",
]
monitoring = [
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.61b0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
]
sqlite = ["sqlite-utils==3.39"]
postgres = ["psycopg2==2.9.11", "psycopg[binary]==3.3.3"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
fix = true
line-length = 120
target-version = "py313"
exclude = [
  "alembic/versions/"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",
  "S105",
  "S106",
  "S608",
  "S110",
  "E501"
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
"fastapi.Depends",
"fastapi.Query",
]
