[project]
name = "Le-Coffre"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4",
  "authlib==1.6.9",
  "bcrypt==5.0.0",
  "cryptography>=46.0.7",
  "fastapi[standard]>=0.133.0",
  "httpx==0.28.1",
  "passlib[bcrypt]==1.7.4",
  "PyCryptodome==3.23.0",
  "python-multipart>=0.0.22",
  "pyjwt==2.12.0",
  "sqlmodel==0.0.37",
  "tenacity>=9.0",
]

[dependency-groups]
dev = [
  "oidc-provider-mock==0.3.4",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-watcher==0.6.3",
  "pytest-xdist==3.8.0",
  "ruff>=0.15.5",
]
monitoring = [
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.61b0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
]
sqlite = ["sqlite-utils==3.39"]
postgres = ["psycopg2==2.9.11", "psycopg[binary]==3.3.3"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
fix = true
line-length = 120
target-version = "py313"
exclude = [
  "alembic/versions/"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",
  "S105",
  "S106",
  "S608",
  "S110",
  "E501"
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
"fastapi.Depends",
"fastapi.Query",
]
